--- a/src/main/webapp/mapStyle.css
+++ b/src/main/webapp/mapStyle.css
@@ -4,7 +4,7 @@ body, html {
 
 #map {
   height: 100%;
-  width: 70%;
+  width: calc(100% - 400px);
   transition: width 2s;
 }
 
